    	.Rd files to start with an alphanumeric.  (PR#14253)
	It also failed when only an S4 class without any methods was
	defined.  (PR#14280)

    o	splinefun(*, method = "monoH.FC")  was not quite monotone in rare
	cases.	(PR#14215)

    o	Rhttpd no longer crashes due to SIGPIPE when the client closes
	the connection prematurely.  (PR#14266)
	
    o	format.POSIXlt() could cause a stack overflow and crash when used on
    	very long vectors.  (PR#14267)

    o	Rd2latex() incorrectly escaped special characters in \usage sections.

    o	mcnemar.test() could alter the levels (dropping unused levels)
	if passed 'x' and 'y' as factors (reported by Greg Snow).

    o	Rd2pdf sometimes needed a further pdflatex pass to get
	hyperlinked pages correct.

    o	interaction() produced malformed results when levels were
    	duplicated, causing segfaults in split().

    o	cut(d, breaks = <n>)  now also works for "Date" or "POSIXt"
        argument d.  (PR#14288)

    o	memDecompress() could decompress incompletely rare xz-compressed
	input due to incorrect documentation of xz utils.  (Report
	and patch from Olaf Mersmann.)

    o	The S4 initialize() methods for "matrix", "array", and "ts" have
 	been fixed to call validObject(). (PR#14284)

    o	R CMD INSTALL now behaves the same way with or without
	--no-multiarch on platforms with only one installed
	architecture.  (It used to clean the src directory without
	--no-multiarch.)



		CHANGES IN R VERSION 2.11.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	Packages must have been installed under R >= 2.10.0, as the
	current help system is the only one now supported.

    o	A port to 64-bit Windows is now available as well as binary
	package repositiories: see the 'R Administration and
	Installation Manual'.

    o	Argument matching for primitive functions is now done in the
	same way as for interpreted functions except for the deliberate
	exceptions

	    call switch .C .Fortran .Call .External
