@@ -49,7 +49,7 @@ BUG FIXES
 
     o	Rhttpd no longer crashes due to SIGPIPE when the client closes
 	the connection prematurely.  (PR#14266)
-	
+
     o	format.POSIXlt() could cause a stack overflow and crash when used on
     	very long vectors.  (PR#14267)
 
@@ -78,6 +78,9 @@ BUG FIXES
 	--no-multiarch on platforms with only one installed
 	architecture.  (It used to clean the src directory without
 	--no-multiarch.)
+
+    o	rbeta(n, a,b) no longer occasionally returns NaN for a >> 1 > b.
+	(PR#14291)
 
 
 
